src/main/java/com/example/board/error/exception/DuplicateException.java
package com.example.board.error.exception;

import com.example.board.error.ErrorCode;

public class DuplicateException extends BusinessException {

    public DuplicateException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}